<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:background="@color/colorBg"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:srcCompat="@drawable/bg_logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/compare_mania"
        android:textColor="@color/red"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/how_many_rounds_you_want_to_play"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etRounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/eg_10"
        android:textAlignment="center"
        android:padding="16dp"
        android:maxLength="7"
        android:background="@drawable/bg_gray"
        android:inputType="number" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/start"
        android:textColor="@color/white"
        android:background="@drawable/bg_green"/>

</LinearLayout>