<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/compare_mania"
        android:textSize="24sp"
        android:textColor="@color/red"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins"
        android:text="@string/score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:paddingHorizontal="8dp"
        android:text="0"
        android:textSize="52sp" />


    <TextView
        android:id="@+id/tvRounds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="Round 0"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/pb"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:progressTint="@color/green"
        android:layout_marginTop="16dp" />


    <LinearLayout
        android:id="@+id/llGame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvFirstNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="9949"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/bg_red"
                android:padding="8dp"
                android:text="@string/textLess"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnEqual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/bg_yellow"
                android:padding="8dp"
                android:text="@string/textEqual"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnGreater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/bg_blue"
                android:padding="8dp"
                android:text="@string/textGreater"
                android:textColor="@color/white"
                android:textSize="32sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvSecondNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="8889"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textSize="24sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPlayAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/bg_green"
            android:paddingHorizontal="16dp"
            android:text="@string/play_again"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>